--- a/kf_gins_ros2_native/config/params.yaml
+++ b/kf_gins_ros2_native/config/params.yaml
@@ -1,6 +1,20 @@
 config_file: "/home/yang/KF-GINS/config/config.yaml"
-imu_topic: "/imu/data"
-gnss_topic: "/gps/fix_cov"
+imu_topic: /imu/data
+gnss_topic: /mavros/global_position/raw/fix
 imu_is_delta: false
 pose_decimation: 10
 max_path_points: 20000
+map_frame: map
+odom_frame: odom
+base_frame: base_link
+imu_flu_to_frd:
+  ros__parameters:
+    input_topic: /mavros/imu/data
+    output_topic: /imu/data
+    flip_gravity: true
+
+odom_to_path:
+  ros__parameters:
+    odom_topic: /kf_gins/odom
+    path_topic: /kf_gins/path
+    buffer_length: 1000
